--- a/angular.json
+++ b/angular.json
@@ -25,11 +25,20 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/primeng/resources/themes/lara-light-teal/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeflex/primeflex.css",
               "node_modules/primeicons/primeicons.css",
-              "src/styles.css"
+              "src/styles.css",
+              {
+                "input": "src/themes/lara-light-teal.css",
+                "bundleName": "lara-light-teal",
+                "inject": false
+              },
+              {
+                "input": "src/themes/lara-dark-teal.css",
+                "bundleName": "lara-dark-teal",
+                "inject": false
+              }
             ],
             "scripts": []
           },
